<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/keyboard">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_ime_keyboard"
            android:summary="@string/ime_desc"
            android:title="@string/enable_ime_keyboard" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/user_interface">

        <EditTextPreference
            android:contentDescription="@string/max_page_desc"
            android:defaultValue="5"
            android:inputType="number"
            android:key="@string/key_max_page"
            android:title="@string/max_page" />

    </PreferenceCategory>

</PreferenceScreen>