<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="200dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_ok"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>